# agent-energy-arena

./: .env.example  .gitignore  API.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LEADERBOARD.md  LICENSE  Makefile  README.md  RULES.md  SCENARIOS.md  docker-compose.yml  evaluate.py  pyproject.toml
.scratch/oilfield-v2/: PRD.md
agents/: __init__.py  api_client.py  base.py  langgraph_agent.py  llm.py  prompts.py  scripted.py  state_summary.py
agents/langgraph_agent/: __init__.py  agent.py
agents/llm_react/: agent.py
agents/llm_supervisor/: __init__.py  actions.py  agent.py  memory.py  policy.py  prompts.py  resolver.py  state_summary.py
agents/scripted/: agent.py
agents/scripted2electricboogaloo/: __init__.py  agent.py
agents/tests/: test_langgraph_agent.py  test_llm.py  test_llm_react.py  test_llm_supervisor_resolver.py  test_nim_live.py  test_scripted_smoke.py
arena/: __init__.py  baselines.py  leaderboard.py  results.py  runner.py
arena/tests/: test_baselines.py  test_leaderboard.py  (+2 more)
baselines/: seed_42.json
docs/: github_ssh_clone_serve_guide_1a.md
scenarios/: __init__.py  baseline.py  economy_stress.py  grid_stress.py
submit/: WRITEUP.md  agent.py
tests/: test_replay.py
world/: README.md  action_log.py  api.py  catalog.py  config.py  economy.py  event_effects.py  events.py  forecast.py  grid.py  hourly_tick.py  pipelines.py  placement.py  population.py  power.py  preview.py  pricing.py  recorder.py  scenario.py  scoring.py  scoring_formula.py  sim.py  snapshots.py  state.py  state_view.py  subsurface.py  weather.py  wells.py  workforce.py
(+73 files in other folders)
